--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.4",
     "react-swipeable-views": "^0.13.9",
     "styled-components": "^5.3.3",
