--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "bootstrap": "^4.6.1",
     "framer": "^1.3.6",
     "framer-motion": "^3.10.6",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.4",
     "react-swipeable-views": "^0.13.9",
+    "react-visibility-sensor": "^5.1.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
