--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://esdhb0906.github.io/",
+  "homepage": "https://eprishb.github.io/",
   "name": "seven-times-design",
   "version": "0.1.0",
   "private": true,
