--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "@types/styled-components": "^5.1.26",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-utils": "^6.6.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.1",
