--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "remix-island": "^0.1.2",
     "remix-utils": "^6.6.0",
     "styled-components": "^6.0.7"
