--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
     "remix-island": "^0.1.2",
     "remix-utils": "^6.6.0",
     "styled-components": "^6.0.7"
