--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,5 @@
 {
-  "include": [
-    "remix.env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "./app/models/cardDetails.server.ts"
-  ],
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx", "app"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "isolatedModules": true,
