--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
+  "homepage": "https://eprisr.github.io/",
+  "name": "seven-times-design",
+  "version": "1.0.0",
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
@@ -14,6 +19,7 @@
     "@remix-run/serve": "^1.19.1",
     "@types/styled-components": "^5.1.26",
     "framer-motion": "^10.15.0",
+    "gh-pages": "^6.0.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
