--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "build-static": "wget -r -nH -i static-urls.txt -P static",
+    "serve-static": "serve static"
   },
   "dependencies": {
-    "@remix-run/css-bundle": "^1.19.1",
+    "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
@@ -27,6 +29,7 @@
     "react-player": "^2.12.0",
     "remix-island": "^0.1.2",
     "remix-utils": "^6.6.0",
+    "serve": "^14.2.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
