Update Static for Reroute

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "sideEffects": false,
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d static",
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
