--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@babel/preset-typescript": "^7.22.5",
     "@remix-run/dev": "^1.19.1",
     "@remix-run/eslint-config": "^1.19.1",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "babel-core": "^6.26.3",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.38.0",
+    "jest": "^29.6.3",
     "typescript": "^5.0.4"
   },
   "engines": {
